--- a/_config.yml
+++ b/_config.yml
@@ -20,14 +20,13 @@
 
 title: "Nveloper's Note"
 email: nveloper@gmail.com
+banner_image: "/assets/images/banner/General Wallpaper"
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Nveloper's Note, A blog where useful informations written.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://nveloper.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  Nveloper
 
 # Build settings
 theme: minima
